fix(ui): upper jaw inline spacing

--- a/client/src/templates/Challenges/classic/editor.css
+++ b/client/src/templates/Challenges/classic/editor.css
@@ -37,6 +37,11 @@ textarea.inputarea {
 .editor-lower-jaw {
   padding-inline: 0 15px;
   padding-block: 15px;
+  white-space: pre-wrap;
+}
+
+.editor-upper-jaw p, .editor-lower-jaw p {
+  margin: 0;
 }
 
 .editor-upper-jaw {
@@ -63,7 +68,7 @@ textarea.inputarea {
   font-size: 1.1rem;
   font-weight: 700;
   line-height: 1.1;
-  margin: 0.1em 0 0.6rem;
+  margin: 0.1em 0 -0.6rem;
 }
 
 .description-highlighter {
